test/studies/hpcc/RA/marybeth/ra-uint-test5.good
ra-uint-test5.chpl:3: error: cannot initialize 'BigStep' of type 'int(64)' from a 'uint(64)'
